# MeshCodec

.github/workflows/: build.yml
src/include/: mc_Float.h
tests/: CMakeLists.txt
tests/src/: main_gui.cpp
